2023-08-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region): Fix last change.

2023-08-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region):
	Handle `last-coding-system-used'.
	(tramp-handle-write-region):
	* tramp-adb.el (tramp-adb-handle-write-region):
	* tramp-smb.el (tramp-smb-handle-write-region):
	* tramp-sshfs.el (tramp-sshfs-handle-write-region):
	Set `coding-system-used'.  (Bug#65022)

	* tramp-sh.el (tramp-sh-handle-write-region):
	Move `last-coding-system-used' handling to
	`tramp-skeleton-write-region'.

2023-08-07  Po Lu  <luangruo@yahoo.com>

	* tramp.el (tramp-encoding-shell): Where /bin/sh was previously
	used, use /system/bin/sh on Android.

2023-08-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region): Fix scoping.  (Bug#65022)

2023-08-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-convert-file-attributes): Extract SELinux context.

	* tramp-sh.el (tramp-stat-file-attributes-with-selinux)
	(tramp-stat-directory-files-and-attributes-with-selinux): New defconst.
	(tramp-do-file-attributes-with-ls)
	(tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat): Return also
	SELinux context.
	(tramp-remote-selinux-p, tramp-do-copy-or-rename-file): Adapt docstring.

	* tramp-sudoedit.el (tramp-sudoedit-do-copy-or-rename-file)
	(tramp-sudoedit-remote-selinux-p): Adapt docstring.
	(tramp-sudoedit-file-attributes-with-selinux): New defconst.
	(tramp-sudoedit-handle-file-attributes): Use it.

2023-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-byte-run--set-suppress-trace): New defun, moved
	from tramp-message.el.
	(tramp-file-name-unify, tramp-file-name-equal-p)
	(tramp-tramp-file-p, tramp-find-method, tramp-find-user)
	(tramp-find-host, tramp-dissect-file-name)
	(tramp-ensure-dissected-file-name, tramp-buffer-name)
	(tramp-delete-temp-file-function, tramp-time-diff):