@@ -1,3 +1,13 @@
+2023-08-15  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-perl-file-name-all-completions): Extend.  It
+	shall return also some basic file attributes.
+	(tramp-bundle-read-file-names): Simplify data to be transferred.
+	(tramp-sh-handle-file-name-all-completions): Read additional attributes.
+	(tramp-sh-handle-expand-file-name): Check also "doas".
+	(tramp-bundle-read-file-names): Handle changed data layout.
+	(tramp-find-file-exists-command): Set "file-exists-p" file property.
+
 2023-08-14  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-skeleton-write-region): Fix last change.
